@@ -1,4 +1,4 @@
-$Id: CHANGES,v 1.239 2004/01/27 10:37:25 stelian Exp $
+$Id: CHANGES,v 1.240 2004/01/28 10:02:31 stelian Exp $
 
 Changes between versions 0.4b35 and 0.4b36 (released ?????????????????)
 =======================================================================
@@ -17,6 +17,12 @@ Changes between versions 0.4b35 and 0.4b36 (released ?????????????????)
 4.	Changed dump to enable the creation of volumes of different
 	sizes in a single run (make -B accept a list of values).
 	Patch contributed by Florian Zumbiehl <florz@gmx.de>.
+
+5.	Use the glibc provided minor() and major() macros instead
+	of our own bitmask implementation. This should be safe for
+	when the major/minor namespace will migrate to 32 bits.
+	Thanks to Zhang Jun <zhangjun@nanjing-fnst.com> for reporting
+	the bug.
 
 Changes between versions 0.4b34 and 0.4b35 (released December 21, 2003)
 =======================================================================
